[tool.poetry]
name = "cluster-notebooks"
version = "0.1.0"
description = ""
authors = ["Jayesh Bhat <jayesh.bhat@rwth-aachen.de>"]

[tool.poetry.dependencies]
python = "^3.8"
pyarrow = "^3.0.0"
scikit-learn = "^0.24.1"
pandas = "^1.2.3"
numpy = "^1.20.1"
seaborn = "^0.11.1"
jupyterlab = "^3.0.11"

[tool.poetry.dev-dependencies]
ipython = "^7.21.0"
pudb = "^2020.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
